test/functions/default-arguments/default-argument-ref.good
default-argument-ref.chpl:2: error: non-lvalue actual is passed to 'ref' formal 'x' of foo()
